[package]
name = "elements_box"
version = "0.2.0"
edition = "2021"
authors = ["Filip Dutescu <filip.dutescu@gmail.com>"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
yew-and-bulma = { version = "0.1.0", path = "../.." }
