[package]
name = "elements_tag"
version = "0.2.0"
edition = "2021"
authors = ["Filip Dutescu <filip.dutescu@hucksy.dev>"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
yew-and-bulma = { path = "../.." }
